--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,25 @@ html {
   background-color: teal;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.page__pokemon-list{
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.pokemon-button {
+  border: none;
+  padding: 10px 15px;
+  font-weight: bold;
+  background-color: rgb(192, 111, 35);
+  color: white;
+  cursor: pointer;
+}
+
+
+.pokemon-button:hover {
+  opacity: .8;
+}
