--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,12 @@
 html {
-  background-color: teal;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #F6F7EB;
+}
+
+.page {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0px 10px;
 }
 
 .page__pokemon-list{
@@ -8,14 +14,26 @@ html {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
+  justify-content: flex-start;
   gap: 10px;
+}
+
+.page__pokemon-list-item{
+  width: 200px;
+  background-color: #393E41;
+  border: 1px solid black;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .pokemon-button {
   border: none;
   padding: 10px 15px;
+  font-size: 16px;
   font-weight: bold;
-  background-color: rgb(192, 111, 35);
+  background-color: #22AAA1;
   color: white;
   cursor: pointer;
 }
