--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #F6F7EB;
@@ -14,7 +19,7 @@ html {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 10px;
 }
 
@@ -41,4 +46,119 @@ html {
 
 .pokemon-button:hover {
   opacity: .8;
+}
+
+#modal-container {
+  position: fixed;
+  padding: 20px;
+  height: 100%;
+  z-index: 999;
+  overflow: auto;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+#modal-container.isVisible {
+  position: fixed;
+  padding: 20px;
+  z-index: 999;
+  overflow: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .5);
+}
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 25px;
+  width: 100%;
+  max-width: 700px;
+  text-align: left;
+  position: relative;
+}
+
+.modal__close {
+  position: absolute; 
+  top: -15px;
+  right: -10px;
+  z-index: 5;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.modal__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal__title {
+  margin: 0;
+}
+
+.modal__sequence-number {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-weight: bolder;
+  font-size: 80px;
+  color: rgba(255, 255, 255, .5);
+  z-index: 4;
+}
+
+.modal__header--left {
+  display: flex;
+  flex-direction: column;
+  flex-grow: .8;
+  align-self: flex-start;
+}
+
+.modal__header-name-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.modal__emoji {
+  font-size: 50px;
+}
+
+.modal__header-details {
+  display: grid;
+  grid-template: 1fr 1fr 1fr / 1fr;
+}
+
+.modal__header-details > * {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal__header-details > div > p:first-of-type {
+  font-weight: bold;
+} 
+
+.modal__header-details > div:last-of-type > p:first-of-type {
+  margin-right: auto;
+}
+
+.modal__header-details > div:last-of-type > p:last-of-type {
+  margin-left: 10px;
+}
+
+.modal__sprite {
+  width: 180px;
 }
