--- a/css/styles.css
+++ b/css/styles.css
@@ -5,105 +5,68 @@
 
 html {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #F6F7EB;
 }
 
-.page {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0px 10px;
+body {
+  background-color: whitesmoke;
+}
+
+p {
+  margin-bottom: 0;
+}
+
+.navbar {
+  padding: 0 10px;
+}
+
+.pokemon__name {
+  padding: 5px 10px;
+  border: 1px solid white;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, .3); 
+  letter-spacing: 1px;
 }
 
 .page__pokemon-list{
-  padding: 0;
-  list-style-type: none;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  margin-top: 20px;
   gap: 10px;
 }
 
 .page__pokemon-list-item{
-  width: 200px;
-  background-color: #393E41;
-  border: 1px solid black;
-  height: 250px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.pokemon-button {
-  border: none;
-  padding: 10px 15px;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: #22AAA1;
+  width: 300px;
   color: white;
-  cursor: pointer;
+  flex-grow: 0;
+  transition: opacity .2s ease, scale .2s ease;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, .2);
 }
 
-
-.pokemon-button:hover {
+.page__pokemon-list-item:hover{
   opacity: .8;
+  scale: 1.05;
 }
 
-#modal-container {
-  position: fixed;
-  padding: 20px;
-  height: 100%;
-  z-index: 999;
-  overflow: auto;
-  display: flex;
-  visibility: hidden;
-  opacity: 0;
-  align-items: center;
-  justify-content: center;
-  top: 0;
+.page__pokemon-image {
+  width: 150px;
+}
+
+.modal-header {
+  border: none;
+  position: absolute;
   right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, .5);
-  transition: opacity .2s ease, visibility .2s ease;
+  z-index: 6;
 }
 
-#modal-container.isVisible {
-  position: fixed;
-  padding: 20px;
-  z-index: 999;
-  overflow: auto;
-  display: flex;
-  visibility: visible;
-  opacity: 1;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, .5);
+.btn-close {
+  color: white;
 }
 
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #fff;
-  padding: 25px;
-  width: 100%;
-  max-width: 700px;
-  text-align: left;
-  position: relative;
-  border-radius: 5px;
+.modal__card {
   border: 1px solid white;
-}
-
-.modal__close {
-  position: absolute; 
-  top: -15px;
-  right: -10px;
-  z-index: 5;
-  padding: 5px 10px;
   border-radius: 5px;
 }
 
@@ -146,7 +109,7 @@ html {
 
 .modal__header-details {
   display: grid;
-  grid-template: 1fr 1fr 1fr / 1fr;
+  grid-template: 1fr 1fr / 1fr;
 }
 
 .modal__header-details > * {
@@ -204,6 +167,11 @@ html {
   display: flex;
   gap: 5%;
   margin-bottom: 10px;
+  align-items: center;
+}
+
+.stat > p {
+  margin: 0;
 }
 
 .stat-bar {
@@ -212,10 +180,11 @@ html {
 
 .stat-bar__inside{
   width: 50%;
-  height: 100%;
+  height: 30px;
   background-color: white;
-  border-radius: 5px;
+  border-radius: 10px;
 }
+
 
 @media screen and (max-width: 575px) {
   .modal__sequence-number {
