--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ p {
   width: 150px;
 }
 
+
 .modal-header {
   border: none;
   position: absolute;
@@ -133,6 +134,7 @@ p {
   width: 180px;
   position: relative;
   z-index: 1000;
+  top: 30px;
 }
 
 .modal__pokemon-details {
@@ -183,6 +185,28 @@ p {
   height: 20px;
   background-color: white;
   border-radius: 10px;
+}
+
+.modal__play-button{
+ background-color: rgba(255, 255, 255, .5); 
+ border-radius: 50%;
+ width: 40px;
+ height: 40px;
+ display: grid;
+ place-items: center;
+ position: relative;
+ border: 1px solid white;
+ transition: opacity .2s ease;
+}
+
+.modal__play-button:hover {
+  opacity: .6;
+}
+
+.modal__play-button-svg{
+  width: 20px;
+  position: relative;
+  left: 1px;
 }
 
 
